--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=scm2.0
+server.port=2024
+spring.datasource.url=jdbc:mysql://localhost:3306/scm20
+spring.datasource.username=root
+spring.datasource.password=memorable@12345
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.show-sql: true
+spring.jpa.hibernate.ddl-auto=update
